@@ -1,5 +1,11 @@
 2023-05-21 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/hc08/gen.c
+	  src/hc08/main.c:
+	  hc08/s08 _BitInt support up to 32 bits.
+
+2023-05-21 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/hc08/gen.c,
 	  src/hc08/main.c:
 	  hc08/s08 _BitInt support: codegen for addition, subtraction and 16-bit shifts. Enable _BitInt up to 16 bits.
